<resources>
    <string name="app_name">AdoptACat</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_login">Login under construction</string>
    <string name="text_main">Main Activity Under Construction</string>
    <string name="action_sign_in">Sign in</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account">Don\'t Have an Account?  Sign Up</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="error">Error</string>
    <string name="complete_all_the_fields">You must fill all the fields</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="password_repeat">Repeat password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="signup_error">Signup Error</string>
    <string name="signup_successful">Welcome onboard!</string>
    <string name="permanent_adoption">Permanent adoption</string>
    <string name="temporary_adoption">Temporary adoption</string>
    <string name="adopt_me">Adopt me now!</string>
    <string name="email_subject">I want to adopt this cat!</string>
    <string name="email_content">Hi! I\'m interested in adopting this cat:</string>
    <string name="send_email">Send email...</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
</resources>
